fix: Overflow in small devices

--- a/src/page/style/root.module.css
+++ b/src/page/style/root.module.css
@@ -307,6 +307,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 1rem 0;
+    overflow: hidden;
 }
 
 .universitas .scrolling .items {
